RM layouts overflow patches/index bug reports position

--- a/public/rm/templates/cards/cards-2.css
+++ b/public/rm/templates/cards/cards-2.css
@@ -12,6 +12,7 @@
 .card.cat, .card.up-next .card-body{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: .5em;
 }
 
